# constixel

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  colortools.h  constixel.h  constixel.hpp  doxygenfile  fastmath.h  sixel.h  sixel_test  sixel_test.cpp  sixel_tools.h
.github/workflows/: codeql.yml  main.yml  msvc.yml
examples/: CMakeLists.txt
examples/dashed_lines/: example_dashed_lines.cpp
examples/drawingapi/: example_drawingapi.cpp
examples/embedded/: example_embedded.cpp
examples/example_graph/: example_graph.cpp
examples/graph/: example_graph.cpp
examples/industrial/: example_industrial.cpp
examples/mandelbrot/: example_mandelbrot.cpp
examples/minimal/: example_minimal.cpp
examples/shader_fill/: example_shader_fill.cpp
examples/specimen/: example_specimen.cpp
examples/text/: example_text.cpp
examples/visualization3d/: example_visualization3d.cpp
examples/watchui/: example_watchui.cpp
fonts/: 04b_30_mono.h  abstract_mono.h  abstract_mono.hpp  advanced_pixel_lcd_7_mono.h  bescii_mono_mono.h  bescii_mono_mono.hpp  bubbly_04b_30_mono.h  bubbly_04b_30_mono.hpp  cd_iconspc_mono.h  cd_iconspc_mono.hpp  fipps_regular_mono.h  fipps_regular_mono.hpp  hachicro_mono.h  hachicro_mono.hpp  ibmplexmono_bold_12_aa.h  ibmplexmono_bold_12_mono.h  ibmplexmono_bold_12_mono.hpp  ibmplexmono_bold_14_aa.hpp  ibmplexmono_bold_14_mono.hpp  ibmplexmono_bold_18_aa.h  ibmplexmono_bold_18_mono.h  ibmplexmono_bold_18_mono.hpp  ibmplexmono_bold_24_aa.h  ibmplexmono_bold_24_mono.h  ibmplexmono_bold_24_mono.hpp  ibmplexmono_bold_32_aa.h  ibmplexmono_bold_32_mono.h  ibmplexmono_bold_32_mono.hpp  ibmplexmono_bold_48_aa.h  ibmplexmono_bold_48_mono.h  ibmplexmono_bold_48_mono.hpp  ibmplexmono_bolditalic_12_aa.h  ibmplexmono_bolditalic_12_mono.h  ibmplexmono_bolditalic_12_mono.hpp  ibmplexmono_bolditalic_14_aa.hpp  ibmplexmono_bolditalic_14_mono.hpp  ibmplexmono_bolditalic_18_aa.h  ibmplexmono_bolditalic_18_aa.hpp  ibmplexmono_bolditalic_18_mono.h  ibmplexmono_bolditalic_18_mono.hpp  (+2092 more)
genfonts/: CMakeLists.txt  README  build_fonts.sh  build_fonts_bm437.sh  build_fonts_jp.sh  build_fonts_otf.sh  build_fonts_special.sh  build_fonts_takwolf.sh  genfont.cpp  yoyo_utf8.txt
genfonts/takwolf/: README
html/: _2_users_2turo_2constixel_2constixel_8h-example.html  annotated.html  annotated_dup.js  classconstixel_1_1format-members.html  classconstixel_1_1format.html  classconstixel_1_1format.js  classconstixel_1_1format__1bit-members.html  classconstixel_1_1format__1bit.html  classconstixel_1_1format__24bit.html  classconstixel_1_1format__2bit-members.html  classconstixel_1_1format__2bit.html  classconstixel_1_1format__32bit.html  classconstixel_1_1format__4bit-members.html  classconstixel_1_1format__4bit.html  classconstixel_1_1format__8bit-members.html  classconstixel_1_1format__8bit.html  classconstixel_1_1hextree-members.html  classconstixel_1_1hextree.html  classconstixel_1_1image-members.html  classconstixel_1_1image.html  classconstixel_1_1image.js  classconstixel_1_1quantize-members.html  classconstixel_1_1quantize.html  classconstixel_1_1shapes_1_1circle-members.html  classconstixel_1_1shapes_1_1circle.html  classconstixel_1_1shapes_1_1circle.js  classconstixel_1_1shapes_1_1circle__aa-members.html  classconstixel_1_1shapes_1_1circle__aa.html  classconstixel_1_1shapes_1_1circle__aa.js  classconstixel_1_1shapes_1_1line-members.html  classconstixel_1_1shapes_1_1line.html  classconstixel_1_1shapes_1_1line.js  classconstixel_1_1shapes_1_1line__aa-members.html  classconstixel_1_1shapes_1_1line__aa.html  classconstixel_1_1shapes_1_1line__aa.js  classconstixel_1_1shapes_1_1point-members.html  classconstixel_1_1shapes_1_1point.html  classconstixel_1_1shapes_1_1point.js  classconstixel_1_1shapes_1_1rect-members.html  classconstixel_1_1shapes_1_1rect.html  (+76 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+17 more)
tests/: CMakeLists.txt  build.sh  constixel_fonts.cpp  constixel_fuzz.cpp  constixel_tests.cpp  sixel_tests.cpp
